samples/_failures_safe/1761787941_b4545d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ca61b70.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_8ca61b70.c:146:30: error: expected ‘;’ at end of input
  146 |     if (n == 1) return matrix
      |                              ^
      |                              ;
./samples/SAFE/__tmp_8ca61b70.c:146:5: error: expected declaration or statement at end of input
  146 |     if (n == 1) return matrix
      |     ^~
